--- a/2024_2.md
+++ b/2024_2.md
@@ -7,7 +7,7 @@ Conteúdo de apoio para a disciplina de Aprendizado de Máquina - ECT3694
 * [Referências de Cursos Online](https://github.com/ect-info/ml/blob/master/cursos_online.md) 
 * [Outras Referências](https://github.com/ect-info/ml/blob/master/outras_referencias.md)
 * [Material de Aula](#material-de-aula) 
-* [Atividades](#atividades)
+* [Atividades](#avalia%C3%A7%C3%B5es)
 * [Cronograma](https://docs.google.com/spreadsheets/d/1opRug-pP-RKPnnFLWNsYMxz8UIagM5mkPorGV4YrSZo/edit?usp=sharing)
  
 ## Canal de Comunicação 
@@ -57,6 +57,19 @@ Conteúdo de apoio para a disciplina de Aprendizado de Máquina - ECT3694
 * [Clique aqui.](aulas/nlp.md)
 
 ## Avaliações 
+
+### Atividades Avaliativas (Previsão)
+* Prever o lucro de uma startup
+* Previsão de compra de um produto
+* Reconhecimento de dígitos escritos a mão
+* Perfil de clientes de uma loja 
+* Análise de perfil de estudantes
+* Reconhecimento de faces
+* Sistema de perguntas e respostas
+* Dados de saúde do governo Federal 
+
+
+
 ### 
 Um relatório e um projeto final. 
 
@@ -185,16 +198,6 @@ Aulas anteriores:
 * [Aula prática - parte 2: Introdução à Processamento de Linguagem Natural](https://youtu.be/gcbeEvpwCZ0)
 * [Código](https://colab.research.google.com/drive/1eJRivNcV_ZdqJqEoX9WhcnusV2-sRKm1?usp=sharing)
 
-### Atividades 
-#### Avaliativas (Previsão)
-* Prever o lucro de uma startup
-* Previsão de compra de um produto
-* Reconhecimento de dígitos escritos a mão
-* Perfil de clientes de uma loja 
-* Análise de perfil de estudantes
-* Reconhecimento de faces
-* Sistema de perguntas e respostas
-* Dados de saúde do governo Federal 
 
 
 #### Extras
