--- a/2024_2.md
+++ b/2024_2.md
@@ -7,7 +7,7 @@ Conteúdo de apoio para a disciplina de Aprendizado de Máquina - ECT3694
 * [Referências de Cursos Online](https://github.com/ect-info/ml/blob/master/cursos_online.md) 
 * [Outras Referências](https://github.com/ect-info/ml/blob/master/outras_referencias.md)
 * [Material de Aula](#material-de-aula) 
-* [Atividades](#avalia%C3%A7%C3%B5es)
+* [Avaliações](#avalia%C3%A7%C3%B5es)
 * [Cronograma](https://docs.google.com/spreadsheets/d/1opRug-pP-RKPnnFLWNsYMxz8UIagM5mkPorGV4YrSZo/edit?usp=sharing)
  
 ## Canal de Comunicação 
@@ -58,7 +58,7 @@ Conteúdo de apoio para a disciplina de Aprendizado de Máquina - ECT3694
 
 ## Avaliações 
 
-### Atividades Avaliativas (Previsão)
+### Atividades Avaliativas (Previsão) - Unidade I
 * Prever o lucro de uma startup
 * Previsão de compra de um produto
 * Reconhecimento de dígitos escritos a mão
@@ -70,8 +70,10 @@ Conteúdo de apoio para a disciplina de Aprendizado de Máquina - ECT3694
 
 
 
-### 
-Um relatório e um projeto final. 
+### Atividades Avaliativas (Previsão) - Unidade I
+* Relatório
+* Projeto final
+* Apresentação 
 
 ### Trabalho Final 
 Escolha de um problema relacionado ao trabalho do estudante ou área de interesse. Site para obter bases de dados: https://www.kaggle.com/
