--- a/2024_2.md
+++ b/2024_2.md
@@ -70,7 +70,7 @@ Conteúdo de apoio para a disciplina de Aprendizado de Máquina - ECT3694
 
 
 
-### Atividades Avaliativas (Previsão) - Unidade I
+### Atividades Avaliativas (Previsão) - Unidade II
 * Relatório
 * Projeto final
 * Apresentação 
@@ -90,9 +90,6 @@ Escolha de um problema relacionado ao trabalho do estudante ou área de interess
 * BISHOP; **Pattern Recognition and Machine Learning**, Springer, 2006. 
 * RUSSELL, STUART; NORVIG, PETER; **Inteligência Artificial**, 3. edição, Prentice Hall.
 * BRAGA; CARVALHO; e LUDERMIR; **Redes neurais artificiais: teoria e aplicações**, 2007
-
-
-
 
 
 
@@ -213,13 +210,4 @@ Aulas anteriores:
 * Implementação do perceptron, https://github.com/ect-info/ml/tree/master/guias/Perceptron 
 
 
-## Bibliografia Básica 
-* PROVOST e FAWCETT; **Data Sciene para Negócios**, Alta Books, 2016.
-* GÉRON; **Hands-On Machine Learning with Scikit-Learn and TensorFlow: Concepts, Tools, and Techniques to Build Intelligent Systems**. O’REILLY, 2017.
-* MITCHELL; **Machine Learning**, Publisher: McGraw-Hill Science/Engineering/Math, 1997.
-* NEGNEVITSKY; **Artificial Intelligence: A Guide to Intelligent Systems**, Second Edition, Publisher Addison Wesley.
-* HAYKIN; **Neural Networks and Learning Machines** (3rd Edition), Publisher: Pearson. 
-* JOSHI; **Artificial Intelligence with Python**,  Packt Publisher, 2017.  
-* BISHOP; **Pattern Recognition and Machine Learning**, Springer, 2006. 
-* RUSSELL, STUART; NORVIG, PETER; **Inteligência Artificial**, 3. edição, Prentice Hall.
-* BRAGA; CARVALHO; e LUDERMIR;  **Redes neurais artificiais: teoria e aplicações**, 2007
+
