--- a/2024_2.md
+++ b/2024_2.md
@@ -43,7 +43,7 @@ Conteúdo de apoio para a disciplina de Aprendizado de Máquina - ECT3694
 * [Clique aqui.](aulas/deep_learning.md)
 
 #### Rede Convolucional 
-
+* [Clique aqui.](aulas/cnn.md)
 
 ## Agrumapamento 
 ### K-Means
