--- a/2024_2.md
+++ b/2024_2.md
@@ -70,11 +70,14 @@ Conteúdo de apoio para a disciplina de Aprendizado de Máquina - ECT3694
 
 
 
-### Atividades Avaliativas (Previsão) - Unidade II
-* Relatório
+### Atividades Avaliativas - Unidade II
 * Projeto final
-* Apresentação 
+  * Apresentação 
 
+### Atividades Avaliativas - Unidade III
+* Projeto final
+  * Relatório
+    
 ### Trabalho Final 
 Escolha de um problema relacionado ao trabalho do estudante ou área de interesse. Site para obter bases de dados: https://www.kaggle.com/
 
